feat: implement FastPath decision caching and PostgreSQL bulk write strategies